refactor dicom_port, dcm_dir

--- a/router.conf.template
+++ b/router.conf.template
@@ -7,3 +7,5 @@ dicom_pathsuffix = /dicom/v1/dicomWeb/studies
 fhir_pathsuffix = /fhir-r4/v1
 tz_name = Asia/Jakarta
 ae_title = DCMROUTER
+dicom_port = 11112
+dcm_dir = /in/
