--- a/conda_env/conda-macos-x64.yml
+++ b/conda_env/conda-macos-x64.yml
@@ -28,4 +28,4 @@ dependencies:
       - idna==3.4
       - pydantic==1.10.7
       - typing-extensions==4.5.0
-      - requests=2.31.0
+      - requests==2.31.0
