--- a/conda_env/conda-win.yml
+++ b/conda_env/conda-win.yml
@@ -30,4 +30,4 @@ dependencies:
     - idna==3.4
     - pydantic==1.10.4
     - typing-extensions==4.4.0
-    - requests=2.31.0
+    - requests==2.31.0
